--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-# redsunrising.github.io
+//# redsunrising.github.io
 
 Dawn's DGMD Journal
+
+thinking of apply ro undergrate college
+
+interested in archeture. into residental architure. wants to bring back the tradition, but in a new way.
+
+forest/rural areas. more peaceful than urban. don't like driving. plays panio, since 5. really serious in HS. 
+
+had 2 dogs. One recently passed. jack Russells.
