--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 //# redsunrising.github.io
 
 Dawn's DGMD Journal
@@ -9,3 +11,5 @@ interested in archeture. into residental architure. wants to bring back the trad
 forest/rural areas. more peaceful than urban. don't like driving. plays panio, since 5. really serious in HS. 
 
 had 2 dogs. One recently passed. jack Russells.
+
+</html>
