--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <html>
 
-//# redsunrising.github.io
-
-Dawn's DGMD Journal
-
-thinking of apply ro undergrate college
-
-interested in archeture. into residental architure. wants to bring back the tradition, but in a new way.
-
-forest/rural areas. more peaceful than urban. don't like driving. plays panio, since 5. really serious in HS. 
-
-had 2 dogs. One recently passed. jack Russells.
+<h4>Dawn's DGMD Journal</h4>
 
 </html>
